--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
@@ -25,10 +27,17 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
